--- a/SpaceEscape/index.html
+++ b/SpaceEscape/index.html
@@ -22,6 +22,10 @@
     <script src="scripts/lib/soundjs-0.6.0.min.js"></script>
     <script src="scripts/lib/preloadjs-0.6.0.min.js"></script>
 
+    <!--Game Objects-->
+    <script src="scripts/objects/plane.js"></script>
+    <script src="scripts/objects/energy.js"></script>
+    <script src="scripts/objects/asteroid.js"></script>
 
     <!--Game Scripts-->
     <script src="scripts/game.js"></script>
