--- a/SpaceEscape/index.html
+++ b/SpaceEscape/index.html
@@ -23,6 +23,7 @@
     <script src="scripts/lib/preloadjs-0.6.0.min.js"></script>
 
     <!--Game Objects-->
+    <script src="scripts/objects/gameObject.js"></script>
     <script src="scripts/objects/space.js"></script>
     <script src="scripts/objects/plane.js"></script>
     <script src="scripts/objects/energy.js"></script>
