--- a/SpaceEscape/index.html
+++ b/SpaceEscape/index.html
@@ -29,8 +29,9 @@
     <script src="scripts/objects/plane.js"></script>
     <script src="scripts/objects/energy.js"></script>
     <script src="scripts/objects/asteroid.js"></script>
+    <script src="scripts/objects/scoreboard.js"></script>
     <script src="scripts/managers/collision.js"></script>
-    
+
 
     <!--Game Scripts-->
     <script src="scripts/game.js"></script>
