--- a/SpaceEscape/index.html
+++ b/SpaceEscape/index.html
@@ -24,6 +24,7 @@
 
     <!--Game Objects-->
     <script src="scripts/utility/utility.js"></script>
+    <script src="scripts/managers/assets.js"></script>
     <script src="scripts/objects/gameObject.js"></script>
     <script src="scripts/objects/space.js"></script>
     <script src="scripts/objects/plane.js"></script>
