--- a/SpaceEscape/index.html
+++ b/SpaceEscape/index.html
@@ -33,6 +33,8 @@
     <script src="scripts/objects/scoreboard.js"></script>
     <script src="scripts/managers/collision.js"></script>
 
+    <!--Game States-->
+    <script src="scripts/states/play.js"></script>
 
     <!--Game Scripts-->
     <script src="scripts/game.js"></script>
