--- a/SpaceEscape/index.html
+++ b/SpaceEscape/index.html
@@ -23,6 +23,8 @@
     <script src="scripts/lib/preloadjs-0.6.0.min.js"></script>
 
     <!--Game Objects-->
+    <script src="scripts/objects/label.js"></script>
+    <script src="scripts/objects/button.js"></script>
     <script src="scripts/utility/utility.js"></script>
     <script src="scripts/managers/assets.js"></script>
     <script src="scripts/objects/gameObject.js"></script>
@@ -35,6 +37,7 @@
 
     <!--Game States-->
     <script src="scripts/states/play.js"></script>
+    <script src="scripts/states/over.js"></script>
 
     <!--Game Scripts-->
     <script src="scripts/game.js"></script>
