--- a/SpaceEscape/index.html
+++ b/SpaceEscape/index.html
@@ -36,6 +36,7 @@
     <script src="scripts/managers/collision.js"></script>
 
     <!--Game States-->
+    <script src="scripts/states/intro.js"></script>
     <script src="scripts/states/play.js"></script>
     <script src="scripts/states/over.js"></script>
 
