--- a/SpaceEscape/index.html
+++ b/SpaceEscape/index.html
@@ -1,8 +1,10 @@
 ﻿<!--Author: Diego Rodriguez-->
 <!--App: Space Escape-->
+<!--Version: 1.0.0-->
 <!--Date: Diego Rodriguez-->
 <!--Author: July 5 2015-->
 <!--Description: Space Escpae assignment 3-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +13,9 @@
     <title>Space Escape</title>
     <link href="css/StyleSheet1.css" rel="stylesheet" />
 </head>
+
 <body onload="preload();">
+
     <!--Game container-->
     <canvas id="canvas" width="640" height="480"></canvas>
 
@@ -42,5 +46,6 @@
 
     <!--Game Scripts-->
     <script src="scripts/game.js"></script>
+
 </body>
 </html>
